# worklogger

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
django_training_worklogger/: asgi.py  settings.py  urls.py  wsgi.py
logger/: admin.py  forms.py  helpers.py  models.py  views.py
logger/migrations/: 0001_initial.py
logger/static/logger/: styles.css
logger/templates/logger/: 404.html  index.html  layout.html  login.html
